player overlaps enemy making him stop

--- a/src/app/power-element/power-element.component.css
+++ b/src/app/power-element/power-element.component.css
@@ -1,9 +1,9 @@
 .energy-element {
   position: absolute;
-  border: rgb(43, 255, 0) 5px solid;
+  border: rgb(3, 255, 16) 5px solid;
   border-radius: 50px;
   height: 20px;
   width: 20px;
-  background-color: rgb(251, 255, 0);
+  background-color: rgb(0, 38, 255);
   transition: 0.1s;
 }
